Fixed divide by zero crash in wavefilter.

BUG:431665


(cherry picked from commit 715bde764fe629ddc8041422c80e0f996d14fed4)